--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+body{
+    background-color: #edf1f5;
+    margin-top: 20px;
+}
+// .card{
+//     position: absolute;
+//     display: flex;
+//     width: 300px;
+//     border-style: none;
+// }
