--- a/src/app/note/note.component.html
+++ b/src/app/note/note.component.html
@@ -4,19 +4,19 @@
     data-bs-whatever="@mdo">Create Note<i class="bi bi-file-earmark-plus"></i></button>
 
     <div class="row">
-        <div class="col-md-4" *ngFor="let data of notesData">
+        <div class="col-md" *ngFor="let data of notesData">
             <div class="card card-body" >
                 <h5>{{data.note_title}}</h5>
                 <p class="text-muted">{{data.note_des}}
                 </p>
 
-                <div class="d-flex align-items-center">
+                <div class="icons d-flex align-items-center">
                     <span class="mx-3">
                         <i class="bi bi-pen" data-bs-toggle="modal" 
-                        data-bs-target="#editNoteModal"></i>
+                        data-bs-target="#editNoteModal"  (click)="getAllDtails(data)"></i>
                     </span>
                     <span class="mx-3">
-                        <i class="bi bi-trash"></i>
+                        <i class="bi bi-trash" (click)="deleteNote(data)"></i>
                     </span>                        
                 </div>
             </div>
@@ -65,26 +65,24 @@
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
-          <form>
-            <div class="mb-3">
+          <form [formGroup]="editForm">
+            <div class="mb-3" >
               <label for="recipient-name" class="col-form-label">Note Title:</label>
-              <input type="text" class="form-control" id="recipient-name">
+              <input type="text" class="form-control" id="recipient-name" formControlName="edit_title" [value]="notesDetails.note_title">
             </div>
             <div class="mb-3">
               <label for="message-text" class="col-form-label">Note Description:</label>
-              <textarea class="form-control" id="message-text"></textarea>
+              <textarea class="form-control" id="message-text" formControlName="edit_description" [value]="notesDetails.note_des"></textarea>
             </div>
           </form>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary" >Update Note</button>
+          <button type="button" class="btn btn-primary" (click)="updateNote(notesData)">Update Note</button>
         </div>
       </div>
     </div>
   </div>
-
-
 
 
 </div>
