--- a/src/app/note/note.component.scss
+++ b/src/app/note/note.component.scss
@@ -7,26 +7,41 @@ body{
     display: flex;
     flex-wrap: wrap;
 }
+// .row{
+//     display: flex;
+//     flex-wrap: wrap;
+// }
 
 
 .card{
-    background-color: blue;
-    position: absolute;
+    background-color: #fff;
+    position: relative;
     display: flex;
-    flex-direction: column;
-    min-width: 0;
-    height: 400px;
+    // flex-wrap: wrap;
+    // flex-direction: column;
+    min-width: 50px;
+    width: 300px;
+    height: 200px;
     border:0 solid transparent;
     word-wrap: break-word;
-    margin-bottom: 30px;
+    // margin-bottom: 30px;
     border-radius: 1;
-    color: white;
+   
     
+}
+.card-body{
+    flex:auto;
+    // padding: 1.5rem;
+    // margin-right: 30px;
+    // margin-top: 20px;    
+}
+.col-md{
+    margin-top: 10px;
+}
+.icons{
+    display: flex;
+    position: absolute;
+    bottom: 10px;
+   
 }
 
-.card-body{
-    flex: 1 1 auto;
-    padding: 1.5rem;
-    margin-top: 10px;
-    
-}
